# neko.bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
framework/: Cargo.toml  README.md
framework/nbf_core/: Cargo.toml
framework/nbf_core/src/: lib.rs  state.rs
framework/nbf_plugins/: Cargo.toml
framework/nbf_plugins/src/: lib.rs
framework/src/: core.rs  lib.rs  plugin.rs  plugins.rs  state.rs  types.rs
hooks/: README.md
hooks/nbh_fluent/: Cargo.toml  README.md
hooks/nbh_sqlx/: Cargo.toml  README.md
libraries/: README.md
libraries/nbl_steam_api/: Cargo.toml  README.md
libraries/nbl_steam_api/src/: lib.rs
modules/: README.md
modules/nbm_steam/: Cargo.toml  README.md
modules/nbm_vrchat/: Cargo.toml  README.md
plugins/: README.md
plugins/nb_actix/: Cargo.toml
plugins/nb_actix/src/: plugin.rs
plugins/nb_anilist/: Cargo.toml
plugins/nb_anilist/src/: plugin.rs
plugins/nb_cache/: Cargo.toml
plugins/nb_cache/src/: lib.rs  plugin.rs
plugins/nb_discord/: Cargo.toml
plugins/nb_discord/src/: lib.rs  plugin.rs  schema.rs
plugins/nb_fluent/: Cargo.toml
plugins/nb_fluent/src/: framework.rs  lib.rs  plugin.rs  poise.rs
plugins/nb_hyper/: Cargo.toml
plugins/nb_hyper/src/: lib.rs
plugins/nb_lifecycle/: Cargo.toml
plugins/nb_lifecycle/src/: framework.rs  lib.rs  plugin.rs
plugins/nb_oauth/: Cargo.toml
plugins/nb_oauth/src/: plugin.rs
plugins/nb_poise/: Cargo.toml
plugins/nb_poise/src/: framework.rs  lib.rs  plugin.rs
plugins/nb_scheduler/: Cargo.toml
plugins/nb_scheduler/src/: lib.rs  plugin.rs
plugins/nb_sqlx/: Cargo.toml
plugins/nb_sqlx/src/: lib.rs  plugin.rs
plugins/nb_steam/: Cargo.toml  README.md
plugins/nb_steam/locale/: en-US.ftl
plugins/nb_steam/src/: lib.rs  plugin.rs  query.rs  schema.rs  ui.rs
plugins/nb_steam/src/cmd/: app.rs  link.rs  mod.rs  user.rs
plugins/nb_steam/src/cmd/top/: apps.rs  guilds.rs  mod.rs  users.rs
plugins/nb_svgui/: Cargo.toml
plugins/nb_svgui/src/: lib.rs  plugin.rs
plugins/nb_sysmon/: Cargo.toml
plugins/nb_sysmon/src/: plugin.rs
plugins/nb_vrchat/: Cargo.toml  README.md
plugins/nb_vrchat/src/: lib.rs  plugin.rs
runtime/: Cargo.toml
runtime/src/: main.rs
