[workspace]
members = ["framework/nbf_*", "framework", "libraries/nbl_*", "plugins/nb_*", "runtime"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# neko.bot Framework
nb_framework.path = "framework"
nbf_core.path = "framework/nbf_core"
nbf_plugins.path = "framework/nbf_plugins"
# neko.bot Libraries
nbl_steam_api.path = "libraries/nbl_steam_api"
# neko.bot Plugins
nb_anilist.path = "plugins/nb_anilist"
nb_discord.path = "plugins/nb_discord"
nb_steam.path = "plugins/nb_steam"
nb_vrchat.path = "plugins/nb_vrchat"
# External dependencies
askama = "0.12"
chrono = "0.4"
derive_more = "0.99"
dotenvy = "0.15"
fluent = "0.16"
futures = "0.3"
intl-memoizer = "0.5"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
poise = { version = "0.5", git = "https://github.com/serenity-rs/poise", branch = "current" }
pretty_env_logger = "0.5"
regex = "1"
reqwest = "0.11"
resvg = "0.33"
ron = "0.8"
rust-embed = "6.6"
sea-query = { version = "0.29", git = "https://github.com/SeaQL/sea-query", features = ["backend-postgres", "derive"] }
sea-query-binder = { version = "0.4", git = "https://github.com/SeaQL/sea-query", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = "1"
serde_with = "1"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" ] }
tokio = "1"
tokio-cron-scheduler = "0.9"