[workspace]
members = ["framework", "libraries/nbl_*", "plugins/nb_*", "runtime"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# neko.bot framework
nbf.path = "framework"
# neko.bot Libraries
nbl_steam_api.path = "libraries/nbl_steam_api"
# neko.bot plugins
nb_anilist.path = "plugins/nb_anilist"
nb_cache.path = "plugins/nb_cache"
nb_discord.path = "plugins/nb_discord"
nb_fluent.path = "plugins/nb_fluent"
nb_lifecycle.path = "plugins/nb_lifecycle"
nb_poise.path = "plugins/nb_poise"
nb_scheduler.path = "plugins/nb_scheduler"
nb_sqlx.path = "plugins/nb_sqlx"
nb_steam.path = "plugins/nb_steam"
nb_svgui.path = "plugins/nb_svgui"
nb_vrchat.path = "plugins/nb_vrchat"
# external dependencies
askama = "0.12"
chrono = "0.4"
derive_more = "0.99"
dotenvy = "0.15"
fluent = "0.16"
futures = "0.3"
futures-locks = "0.7"
intl-memoizer = "0.5"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
poise = { version = "0.5", git = "https://github.com/serenity-rs/poise", branch = "current" }
pretty_env_logger = "0.5"
regex = "1"
reqwest = "0.11"
resvg = "0.34"
ron = "0.8"
rust-embed = "6.6"
sea-query = { version = "0.29", git = "https://github.com/SeaQL/sea-query" }
sea-query-binder = { version = "0.4", git = "https://github.com/SeaQL/sea-query" }
serde = "1"
serde_json = "1"
serde_with = "3"
sqlx = "0.6"
tokio = "1"
tokio-cron-scheduler = "0.9"
libzetta = "0.5"
hyper = "0.14"
