[package]
name = "nb_runtime"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
# neko.bot framework
nbf = { workspace = true, features = ["plugin"] }
# neko.bot plugins
nb_anilist = { workspace = true, features = ["plugin"] }
nb_discord = { workspace = true, features = ["plugin"] }
nb_lifecycle = { workspace = true }
nb_steam = { workspace = true, features = ["plugin"] }
nb_vrchat = { workspace = true, features = ["plugin"] }
# external dependencies
pretty_env_logger.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
log = { workspace = true, features = ["release_max_level_warn"] }
# Enabling runtime features
sqlx = { workspace = true, features = [ "runtime-tokio-native-tls" ]}
poise.workspace = true
nb_poise = { workspace = true, features = ["framework"]}
nb_sqlx.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true