# Copyright 2023 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[package]
name = "nb_actix"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[features]
plugin = ["nbf/plugin", "dep:actix-web", "dep:log"]

[dependencies]
# neko.bot framework
nbf = { workspace = true, optional = true }
# neko.bot modules
nb_lifecycle = { workspace = true, optional = true }
# external dependencies
actix-web = { workspace = true, optional = true }
log = { workspace = true, optional = true }
