[package]
name = "nb_discord"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
# neko.bot framework
nbf = { workspace = true, features = ["plugins"] }
# neko.bot plugins
nb_lifecycle.workspace = true
nb_poise.workspace = true
nb_sqlx = { workspace = true, features = ["plugin", "postgres"] }
# external dependencies
log.workspace = true
poise.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
sqlx.workspace = true
