[package]
name = "nb_fluent"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[features]
framework = ["nbf/core", "dep:rust-embed"]
plugin = ["nbf/plugins"]
poise = ["plugin", "dep:nb_poise", "dep:nb_lifecycle"]

[dependencies]
# neko.bot framework
nbf.workspace = true
# neko.bot plugins
nb_lifecycle = { workspace = true, optional = true }
nb_poise = { workspace = true, optional = true }
# external dependencies
fluent.workspace = true
intl-memoizer.workspace = true
log.workspace = true
rust-embed = { workspace = true, optional = true }
