[package]
name = "nb_fluent"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[features]
framework = ["nbf/framework", "dep:rust-embed"]
plugin = ["nbf/plugin"]
poise = ["plugin", "dep:nb_poise", "dep:nb_lifecycle"]

[dependencies]
# neko.bot framework
nbf = { workspace = true, optional = true }
# neko.bot plugins
nb_lifecycle = { workspace = true, optional = true }
nb_poise = { workspace = true, optional = true }
# external dependencies
fluent.workspace = true
intl-memoizer.workspace = true
log.workspace = true
rust-embed = { workspace = true, optional = true }
