# Copyright 2023 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[package]
name = "nb_fluent"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[features]
framework = ["nbf/framework", "dep:log", "dep:rust-embed"]
plugin = ["nbf/plugin", "dep:nb_lifecycle", "dep:log"]
poise = ["plugin", "dep:nb_poise"]

[dependencies]
# neko.bot framework
nbf = { workspace = true, optional = true }
# neko.bot plugins
nb_lifecycle = { workspace = true, optional = true }
nb_poise = { workspace = true, optional = true }
# external dependencies
fluent.workspace = true
intl-memoizer.workspace = true
log = { workspace = true, optional = true }
rust-embed = { workspace = true, optional = true }
