# Copyright 2023 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[package]
name = "nb_hyper"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
# neko.bot framework
nbf = { workspace = true, features = ["plugin"] }
# neko.bot plugins
nb_lifecycle.workspace = true
# external dependencies
hyper.workspace = true
log.workspace = true
