# Copyright 2023 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[package]
name = "nb_lifecycle"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[features]
framework = ["nbf/framework", "dep:tokio"]
plugin = ["framework", "nbf/plugin", "dep:log"]

[dependencies]
# neko.bot framework
nbf = { workspace = true, features = ["state"] }
# external dependencies
futures.workspace = true
futures-locks.workspace = true
log = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
