[package]
name = "nb_poise"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
# neko.bot Framework
nbf = { workspace = true, features = ["plugins"] }
# neko.bot Plugins
nb_lifecycle.workspace = true
# External dependencies
futures.workspace = true
poise.workspace = true
