[package]
name = "nb_poise"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
# neko.bot framework
nbf = { workspace = true, features = ["plugins"] }
# neko.bot plugins
nb_lifecycle.workspace = true
# external dependencies
futures.workspace = true
poise.workspace = true
