[package]
name = "nb_sqlx"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[features]
plugin = ["nbf/plugins"]
mssql = ["sqlx/mssql"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
# neko.bot framework
nbf.workspace = true
# external dependencies
sqlx = { workspace = true, features = [ "runtime-tokio-native-tls" ]}
