[package]
name = "nb_steam"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
# neko.bot framework
nbf = { workspace = true, features = ["plugins"] }
# neko.bot Libraries
nbl_steam_api.workspace = true
# neko.bot plugins
nb_discord.workspace = true
nb_fluent = { workspace = true, features = ["framework", "poise"]}
nb_lifecycle.workspace = true
nb_poise.workspace = true
nb_sqlx.workspace = true
# external dependencies
chrono.workspace = true
itertools.workspace = true
log.workspace = true
poise.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
sqlx.workspace = true
# Temporary
askama.workspace = true
regex.workspace = true
resvg.workspace = true
reqwest.workspace = true

rust-embed.workspace = true