# Copyright 2023 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[package]
name = "nb_steam"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[features]
schema = ["dep:sea-query"]
plugin = [
  "schema",
  "nbf/plugin",
  "dep:nbl_steam_api",
  "nb_discord/plugin",
  "nb_fluent/framework",
  "nb_fluent/poise",
  "nb_poise/plugin",
  "nb_sqlx/plugin",
  "dep:chrono",
  "dep:itertools",
  "dep:log",
  "dep:poise",
  "dep:sea-query-binder",
  "dep:sqlx",
]

[dependencies]
# neko.bot framework
nbf = { workspace = true, optional = true }
# neko.bot Libraries
nbl_steam_api = { workspace = true, optional = true }
# neko.bot plugins
nb_discord = { workspace = true, optional = true }
nb_fluent = { workspace = true, optional = true }
nb_lifecycle = { workspace = true, optional = true }
nb_poise = { workspace = true, optional = true }
nb_sqlx = { workspace = true, optional = true }
# external dependencies
chrono = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }
log = { workspace = true, optional = true }
poise = { workspace = true, optional = true }
sea-query = { workspace = true, optional = true }
sea-query-binder = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
# Temporary
askama.workspace = true
regex.workspace = true
resvg.workspace = true
reqwest.workspace = true
rust-embed.workspace = true
